<resources>
    <!-- App Name -->
    <string name="app_name">QuickBite</string>

    <!-- Common Strings -->
    <string name="next">N E X T</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_have_account">Already Have An Account?</string>
    <string name="choose_your_order">Choose Your Order</string>
    <string name="profile">Profile</string>

    <!-- Screen02 -->
    <string name="quick_bite_title">Quick Bite\n Food Service</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_message">It\'s a pleasure to meet you. We are excited that you\'re here so let\'s get started!</string>

    <!-- Screen03 -->
    <string name="free_delivery">Free Delivery Offers</string>
    <string name="free_delivery_details">Free delivery for new customers via Apple Pay and others payment methods.</string>

    <!-- Screen04 -->
    <string name="choose_food">Choose Your Food</string>
    <string name="choose_food_details">Easily find your type of food craving and you\'ll get delivery in wide range.</string>

    <!-- Screen05 -->
    <string name="sign_in_title">Sign Up</string>

    <!-- Screen06 -->
    <string name="welcome_quickbite">Welcome To QuickBite</string>
    <string name="sign_in_message">Let\'s Sign In.!Login to Your Account to Continue your Courses</string>

    <!-- Screen07 -->
    <string name="provide_best_foods">Provide Best Foods \nFor You</string>
    <string name="burger">Burger</string>
    <string name="hotdogs">HotDogs</string>
    <string name="pizza">Pizza</string>
    <string name="pasta">Pasta</string>
    <string name="burrito">Burrito</string>
    <string name="taco">Taco</string>

    <!-- Screen08 -->
    <string name="profile_name">Daniru Dodangoda</string>
    <string name="profile_email">Email\n ABC@gmail.com</string>
    <string name="profile_phone">Phone\n 123456789</string>
    <string name="profile_location">Location\n Malabe Srilanka</string>
</resources>